--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@exortek/express-mongo-sanitize": "^1.1.0",
     "@maptiler/client": "^2.5.1",
     "@maptiler/sdk": "^3.7.0",
     "cloudinary": "^1.41.3",
